# choc

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build_cmake.yml
audio/: choc_AudioFileFormat.h  choc_AudioFileFormat_FLAC.h  choc_AudioFileFormat_MP3.h  choc_AudioFileFormat_Ogg.h  choc_AudioFileFormat_WAV.h  choc_AudioMIDIBlockDispatcher.h  choc_AudioSampleData.h  choc_MIDI.h  choc_MIDIFile.h  choc_MIDISequence.h  choc_Oscillators.h  choc_SampleBufferUtilities.h  choc_SampleBuffers.h  choc_SincInterpolator.h
audio/io/: choc_AudioMIDIPlayer.h  choc_RenderingAudioMIDIPlayer.h  choc_RtAudioPlayer.h
audio/io/rtaudio/: README.md  RtMidi.h
choc/audio/: choc_AudioFileFormat.h  choc_AudioFileFormat_WAV.h  choc_AudioMIDIBlockDispatcher.h  choc_MIDI.h  choc_MIDIFile.h  choc_SampleBuffers.h
choc/audio/io/: choc_AudioMIDIPlayer.h  choc_RtAudioPlayer.h
choc/audio/io/rtaudio/: RtAudio.cpp  RtAudio.h  RtMidi.cpp
choc/containers/: choc_ArgumentList.h  choc_FIFOReadWritePosition.h  choc_JSONValue.h  choc_Value.h  choc_ZipFile.h  choc_zlib.h
choc/gui/: choc_DesktopWindow.h  choc_WebView.h
choc/javascript/: choc_javascript.h  choc_javascript_QuickJS.h
choc/memory/: choc_PoolAllocator.h  choc_xxHash.h
choc/network/: choc_HTTPServer.h  choc_MIMETypes.h
choc/platform/: choc_BuildDate.h  choc_DetectDebugger.h  choc_DisableAllWarnings.h  choc_Execute.h  choc_UnitTest.h
choc/text/: choc_Files.h  choc_HTML.h  choc_JSON.h
choc/threading/: choc_TaskThread.h
containers/: choc_AlignedMemoryBlock.h  choc_COM.h  choc_DirtyList.h  choc_MultipleReaderMultipleWriterFIFO.h  choc_ObjectPointer.h  choc_PoolAllocator.h  choc_SingleReaderMultipleWriterFIFO.h  choc_SmallVector.h  choc_Value.h  choc_VariableSizeFIFO.h  choc_ZipFile.h  choc_zlib.h
examples/: CMakeLists.txt  README.md  audio_beep_player.cpp  audio_operations.cpp  audio_sine_wave.cpp  fifo_producer_consumer.cpp  file_watcher_example.cpp  http_server.cpp  javascript_integration.cpp  midi_file_processing.cpp  text_processing.cpp  threading_patterns.cpp  value_and_json.cpp  webview_desktop_app.cpp  xxhash_example.cpp
gui/: choc_DesktopWindow.h  choc_MessageLoop.h  choc_WebView.h
javascript/: choc_javascript.h  choc_javascript_Console.h  choc_javascript_Duktape.h  choc_javascript_QuickJS.h  choc_javascript_Timer.h  choc_javascript_V8.h
math/: choc_MathHelpers.h
memory/: choc_Endianness.h  choc_ObjectPointer.h  choc_ObjectReference.h  choc_PoolAllocator.h
network/: choc_HTTPServer.h
platform/: choc_BuildDate.h  choc_DisableAllWarnings.h  choc_DynamicLibrary.h  choc_Endianness.h  choc_MemoryDLL.h  choc_ObjectiveCHelpers.h  choc_Platform.h  choc_VariableLengthEncoding.h  choc_Windows.h
tests/: CMakeLists.txt  choc_UnitTest.h  choc_tests.cpp  choc_tests.h  choc_webserver_example.h  choc_webview_example.h  main.cpp  main2.cpp
text/: choc_Base64.h  choc_CodePrinter.h  choc_Files.h  choc_FloatToString.h  choc_HTML.h  choc_JSON.h  choc_MIMETypes.h  choc_OpenSourceLicenseList.h  choc_StringUtilities.h  choc_UTF8.h  choc_xxHash.h
threading/: choc_TaskThread.h  choc_ThreadSafeFunctor.h
